# tabcascade

./: README.md  pyproject.toml  toy_example.ipynb
data/: data_preprocess.py  data_utils.py  fast_dataloader.py
data/configs/: adult.yaml  airlines.yaml  beijing.yaml  credit_g.yaml  default.yaml  diabetes.yaml  electricity.yaml  kc1.yaml  news.yaml  nmes.yaml  phoneme.yaml  shoppers.yaml
data/raw/electricity/: electricity.csv
data/raw/kc1/: kc1.csv
disttree/: README.md  __init__.py  distfamily.R  distfit.R  disttree.R  model.py
evaluation/: eval_alphaprecision.py  eval_dcr.py  eval_detection.py  eval_mia.py  eval_ml_efficiency.py  eval_similarity.py
model/: config.yaml  tabcascade.py  utils.py
model/highres/: model.py  utils.py
model/lowres/: encoder.py  layers.py  model.py  utils.py
