[project]
name = "tabcascade-official"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dython>=0.7.12",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "pandas[parquet]>=3.0.2",
    "pathlib>=1.0.1",
    "polars>=1.40.0",
    "rpy2>=3.6.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sdmetrics>=0.25.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torch-ema>=0.3",
    "tqdm>=4.67.3",
]
